fixed: too much panel top padding

--- a/src/styles/global-styles/fabric-fixes.scss
+++ b/src/styles/global-styles/fabric-fixes.scss
@@ -152,7 +152,7 @@ h5 {
 
 .ms-Panel-content {
 	height: 100%;
-	padding-top: 35px;
+	padding-top: 5px;
 	padding-bottom: 35px;
 	overflow-y: auto;
 }
